# Dungeon-Verse

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: .bashrc  devcontainer.json  docker-compose.yml
app/core/: settings.py
app/dv_realm/: apps.py
