[project]
name = "dungeon-verse"
version = "0.0.1"
description = "Starting for fun, keeping for friendship."
authors = [
    {name = "valci-oaf"}
]
license = "GNU 3.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "django-mongodb-backend (>=6.0.3,<7.0.0)",
    "celery (>=5.6.3,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
